<resources>
    <string name="app_name">WGS App</string>
    <string name="preference_file_key" translatable="false">onl.deepspace.wgs.PREFERENCE_FILE_KEY</string>

    <string name="login_header">Login</string>
    <string name="login_hint">Logge dich mit deinen offiziellen Eltern-Portal Zugansdaten ein. Dein Passwort wird nicht von uns gespeichert.\n\n
        Klicke <a href="https://welfen.eltern-portal.org/registrieren">hier</a> um dich zu registrieren.\n\n
        Mit dem Login akzeptierst du unsere <a href="https://deepspace.onl/law/privacy">Datenschutzbestimmungen</a> und die <a href="https://welfen.eltern-portal.org/">Datenschutzbestimmungen</a> des Elternportals.
    </string>

    <string name="about_header">DeepSpace Development</string>
    <string name="about_authors">Entwickelt von:\n
         <a href="https://deepspace.onl/about-us/">Dennis Kugelmann</a> und <a href="https://deepspace.onl/about-us/">Sebastian Schneider</a>
    </string>
    <string name="about_disclaimer">Copyright 2016 DeepSpace Development \n\nDies ist keine Offizielle App des Welfen-Gymnasium-Schongau bzw. der art soft and more GmbH. Deepspace Development wird nicht vom Welfen-Gymnasium-Schongau oder der art soft and more GmbH unterstützt und spiegelt nicht deren Ansichten oder Meinungen dar. Deepspace ist nicht an der Entwicklung oder Verwaltung des Elternportals beteiligt.</string>
    <string name="wgs_assitance">Ohne freundliche Unterstützung des Welfen-Gymnasiums-Schongau</string>

    <string name="portal_representations_disclaimer">Teilweise werden Vertretungen aufgrund eines Portal-Bugs nicht gelistet.\n\nWir übernehmen keinerlei Garantie für die Korrektheit der Daten. Alle Angaben ohne Gewähr.</string>
    <string name="portal_timetable_disclaimer">Teilweise werden Stundenpläne aufgrund eines Portal-Bugs nicht angezeitgt.\n\nWir übernehmen keinerlei Garantie für die Korrektheit der Daten. Alle Angaben ohne Gewähr.</string>

    <!-- Strings related to login -->
    <string name="app_login">WGS App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="keep_loggedin">Eingeloggt bleiben</string>
    <string name="logging_in_message">Logge ein</string>

    <string name="action_change_subject_colors">Fächerfarben anpassen</string>
    <string name="action_custom_timetable">Eigener Stundenplan</string>
    <string name="action_about">About</string>
    <string name="action_feature_request">Neue Funktion vorschlagen</string>
    <string name="action_logout">Abmelden</string>
    <string name="action_settings">Settings</string>


    <string name="today">Heute, %1$s</string>
    <string name="tomorrow">Morgen, %1$s</string>

    <string name="times">Stunde</string>
    <string name="time1">1</string>
    <string name="time2">2</string>
    <string name="time3">3</string>
    <string name="time4">4</string>
    <string name="time5">5</string>
    <string name="time6">6</string>
    <string name="time7">7</string>
    <string name="time8">8</string>
    <string name="time9">9</string>
    <string name="time10">10</string>
    <string name="time11">11</string>

    <string name="free">-</string>
    <string name="german">D</string>
    <string name="maths">M</string>
    <string name="english">E</string>
    <string name="latin">L</string>
    <string name="physics">Ph</string>
    <string name="informatics">Inf</string>
    <string name="economyNLaw">WR</string>
    <string name="geographie">Geo</string>
    <string name="sports">Spo</string>
    <string name="chemistry">C</string>
    <string name="biology">B</string>
    <string name="history">G</string>
    <string name="socialEdu">Soz</string>
    <string name="socialBaseEdu">SoG</string>
    <string name="religion">Reli</string>
    <string name="french">F</string>
    <string name="spain">S</string>
    <string name="theatre">Drg</string>
    <string name="choir">Chor</string>
    <string name="orchestra">Orch</string>
    <string name="NT">NT</string>
    <string name="music">Mu</string>
    <string name="arts">Ku</string>
    <string name="psychology">Psy</string>
    <string name="bioChemPrak">BCP</string>
    <string name="robotic">Rob</string>

    <string name="intMaths">IM</string>
    <string name="intGerman">ID</string>
    <string name="intEnglish">IE</string>
    <string name="intFrench">IF</string>
    <string name="intLatin">IL</string>
    <string name="intPhysics">IPh</string>
    <string name="intChemistry">IC</string>

    <string name="long_time1">07:45 – 08:30</string>
    <string name="long_time2">08:30 – 09:15</string>
    <string name="long_time3">09:40 – 10:25</string>
    <string name="long_time4">10:25 – 11:10</string>
    <string name="long_time5">11:20 – 12:05</string>
    <string name="long_time6">12:05 – 12:50</string>
    <string name="long_time7">13:00 – 13:45</string>
    <string name="long_time8">13:45 – 14:30</string>
    <string name="long_time9">14:30 – 15:15</string>
    <string name="long_time10">15:30 – 16:15</string>
    <string name="long_time11">16:15 – 17:00</string>

    <string name="long_free">Freistunde</string>
    <string name="long_german">Deutsch</string>
    <string name="long_maths">Mathematik</string>
    <string name="long_english">Englisch</string>
    <string name="long_latin">Latein</string>
    <string name="long_physics">Physik</string>
    <string name="long_informatics">Informatik</string>
    <string name="long_economyNLaw">Wirtschaft und Recht</string>
    <string name="long_geographie">Geographie</string>
    <string name="long_sports">Sport</string>
    <string name="long_chemistry">Chemie</string>
    <string name="long_biology">Biologie</string>
    <string name="long_history">Geschichte</string>
    <string name="long_socialEdu">Sozialkunde</string>
    <string name="long_socialBaseEdu">Sozialpraktische Grundbildung</string>
    <string name="long_religion">Religion</string>
    <string name="long_french">Französisch</string>
    <string name="long_spain">Spanisch</string>
    <string name="long_theatre">Theater</string>
    <string name="long_choir">Chor</string>
    <string name="long_orchestra">Orchester</string>
    <string name="long_NT">Natur und Technik</string>
    <string name="long_music">Musik</string>
    <string name="long_arts">Kunst</string>
    <string name="long_psychology">Psychology</string>
    <string name="long_bioChemPrak">Biol. - chem. Praktikum</string>
    <string name="long_robotic">Robotic</string>

    <string-array name="all_subjects">
        <item/>
        <item>Freistunde</item>
        <item>Deutsch</item>
        <item>Mathematik</item>
        <item>Englisch</item>
        <item>Latein</item>
        <item>Physik</item>
        <item>Informatik</item>
        <item>Wirtschaft und Recht</item>
        <item>Geographie</item>
        <item>Sport</item>
        <item>Chemie</item>
        <item>Biologie</item>
        <item>Geschichte</item>
        <item>Sozialkunde</item>
        <item>Sozialpraktische Grundbildung</item>
        <item>Religion</item>
        <item>Französisch</item>
        <item>Spanisch</item>
        <item>Theater</item>
        <item>Chor</item>
        <item>Orchester</item>
        <item>Natur und Technik</item>
        <item>Musik</item>
        <item>Kunst</item>
        <item>Psychology</item>
        <item>Biol. - chem. Praktikum</item>
        <item>Robotic</item>
    </string-array>

    <string name="long_intMaths">Intensivierung Mathe</string>
    <string name="long_intGerman">Intensivierung Deutsch</string>
    <string name="long_intEnglish">Intensivierung Englisch</string>
    <string name="long_intFrench">Intensivierung Französisch</string>
    <string name="long_intLatin">Intensivierung Latein</string>
    <string name="long_intPhysics">Intensivierung Physik</string>
    <string name="long_intChemistry">Intensivierung Chemie</string>

    <string name="monday">Mo</string>
    <string name="tuesday">Di</string>
    <string name="wednesday">Mi</string>
    <string name="thursday">Do</string>
    <string name="friday">Fr</string>


    <string name="long_monday">Montag</string>
    <string name="long_tuesday">Dienstag</string>
    <string name="long_wednesday">Mittwoch</string>
    <string name="long_thursday">Donnerstag</string>
    <string name="long_friday">Freitag</string>

    <string name="red">Rot</string>
    <string name="pink">Pink</string>
    <string name="purple">Violett</string>
    <string name="deep_purple">Dunkel Violett</string>
    <string name="indigo">Indigo Blau</string>
    <string name="blue">Blau</string>
    <string name="light_blue">Hellblau</string>
    <string name="cyan">Türkis</string>
    <string name="teal">Seegrün</string>
    <string name="green">Grün</string>
    <string name="light_green">Hellgrün</string>
    <string name="lime">Limettengrün</string>
    <string name="yellow">Gelb</string>
    <string name="amber">Bernsteingelb</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Dunkel Orange</string>
    <string name="brown">Braun</string>
    <string name="grey">Grau</string>
    <string name="blue_grey">Blau-Grau</string>

    <string name="title_activity_portal">Portal</string>
    <string name="no_representation">Keine Vertretungen</string>
    <string name="lesson">Stunde</string>
    <string name="subject">Fach</string>
    <string name="room">Raum</string>
    <string name="teacher">Lehrer</string>
    <string name="connection_failed">Verbindung fehlgechlagen oder falsches Passwort</string>

    <!--Others-->
    <string name="admob_id" translatable="false">ca-app-pub-3742245157994788/5610026757</string>
    <string name="remove_ads">Werbung Entfernen</string>
    <string name="select_child">Kind auswählen</string>
    <string name="title_activity_select_child">Kind auswählen</string>
    <string name="updated_at">Aktualisiert am</string>

    <string name="try_again">Erneut Versuchen</string>
    <string name="portal_foodmenu_disclaimer">Wir übernehemen keinerlei Garantie für die Korrektheit der Daten. Alle Angaben ohne Gewähr.</string>
    <string name="action_save_timetable">Stundenplan speichern</string>
    <string name="action_discard_timetable">Änderungen verwerfen</string>
    <string name="create_own_timetable">Eigenen erstellen</string>
    <string name="no_timetable">Kein Stundenplan</string>
    <string name="timetable_changes_discarded">Veränderungen am Studenplan verworfen</string>
    <string name="tutorial_click_menu_multiple">Klick hier um das Kind auszuwählen oder um die Farben für die Fächer anzupassen.</string>
    <string name="tutorial_click_menu_single">Klick hier um die Farben für die Fächer anzupassen.</string>
    <string name="action_create_timetable">Stundenplan anpassen</string>
</resources>
