<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="onl.deepspace.wgs.activities.PortalActivity">
    <item
        android:id="@+id/action_select_child"
        android:orderInCategory="1"
        android:icon="@drawable/ic_arrow_drop_down_white_24dp"
        android:title="@string/select_child"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_subject_colors"
        android:orderInCategory="2"
        android:title="@string/action_change_subject_colors"
        android:icon="@drawable/ic_palette_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remads"
        android:orderInCategory="101"
        android:title="@string/remove_ads"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feature_request"
        android:orderInCategory="103"
        android:title="@string/action_feature_request"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="104"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
