<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:id="@+id/about_activity"
    tools:context="onl.deepspace.wgs.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/deepspace_logo"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:src="@drawable/deepspace"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:textSize="23sp"
            android:textColor="#555"
            android:gravity="center"
            android:text="@string/about_header"/>
        <TextView
            android:id="@+id/about_authors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="13dp"
            android:textSize="16sp"
            android:textColor="#555"
            android:gravity="center"
            android:text="@string/about_authors"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#aaa"
            android:textSize="13sp"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/about_disclaimer"/>

    </LinearLayout>

</ScrollView>
