<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="onl.deepspace.wgs.RepräsentationFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/card_margin"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            card_view:cardElevation="4dp">
                <TextView
                    android:id="@+id/studentName"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/updated"
                    android:layout_gravity="end"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/card_margin"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dateToday"
                    android:text="@string/today"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TableLayout
                    android:id="@+id/representationsToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="4"
                    android:gravity="center">
                    <TableRow
                        android:background="@color/darkergrey"
                        android:gravity="center"
                        android:weightSum="4">
                        <TextView
                            android:text="@string/lesson"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                        <TextView
                            android:text="@string/subject"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                        <TextView
                            android:text="@string/teacher"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                        <TextView
                            android:text="@string/room"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                    </TableRow>
                </TableLayout>
                <TextView
                    android:id="@+id/noToday"
                    android:text="@string/noRepresentation"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/card_margin"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            card_view:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dateTomorrow"
                    android:text="@string/tomorrow"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TableLayout
                    android:id="@+id/representationsTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="4"
                    android:gravity="center">
                    <TableRow
                        android:background="@color/darkergrey"
                        android:gravity="center"
                        android:weightSum="4">
                        <TextView
                            android:text="@string/lesson"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                        <TextView
                            android:text="@string/subject"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                        <TextView
                            android:text="@string/teacher"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                        <TextView
                            android:text="@string/room"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="8dp"
                            android:gravity="center"
                            android:layout_weight="1"/>
                    </TableRow>
                </TableLayout>
                <TextView
                    android:id="@+id/noTomorrow"
                    android:text="@string/noRepresentation"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
